2010-01-28  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.UserPasswordDialog.cs:
	* gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.SslServerTrustDialog.cs:
	* gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.ClientCertificateDialog.cs:
	* gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.ClientCertificatePasswordDialog.cs:
	  Flush.

2009-11-12  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl.Subversion.addin.xml: Don't
	  include the linux svn client on windows.

2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.VersionControl.Subversion.addin.xml: Bump MD
	  version.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* MonoDevelop.VersionControl.Subversion.csproj:
	* gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.UserPasswordDialog.cs:
	* gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.SslServerTrustDialog.cs:
	* gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.ClientCertificateDialog.cs:
	* gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.ClientCertificatePasswordDialog.cs:
	  Flush.

2009-10-21  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl.Subversion.dll.config: Add
	  correct dll mapping for freebsd.

2009-10-13  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.VersionControl.Subversion.csproj: Import md.targets

2009-10-09  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs: Updated license.

2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl.Subversion.addin.xml: Update
	  license.

2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.VersionControl.Subversion.addin.xml: Bump MD
	  version.

2009-10-06  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* MonoDevelop.VersionControl.Subversion/SvnClient.cs:
	* MonoDevelop.VersionControl.Subversion/SubversionRepository.cs: